Navibar alignment tweaks and button style fixes (#932)

--- a/themes/finna2/less/finna/navigation.less
+++ b/themes/finna2/less/finna/navigation.less
@@ -108,7 +108,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    vertical-align: bottom;
+    vertical-align: top;
     font-size: @font-size-base;
     text-transform: uppercase;
     font-weight: 600;
